2011-06-02  Bruno Haible  <bruno@clisp.org>

	doc: Fix a module name.
	* doc/posix-functions/open.texi: Fix module name 'nonblocking'.

2011-06-02  Bruno Haible  <bruno@clisp.org>

	pipe2: Remove dependency on 'nonblocking' module.
	* lib/pipe2.c: Include verify.h. Include nonblocking.h only if
	O_NONBLOCK is defined by gnulib.
	(pipe2) [WIN32]: If O_NONBLOCK is not defined by gnulib, verify that it
	is zero.
	* modules/pipe2 (Depends-on): Add verify. Remove nonblocking.
	* tests/test-pipe2.c: Include nonblocking.h only if O_NONBLOCK is
	defined by gnulib.
	(get_nonblocking_flag): New function.
	(main): Test O_NONBLOCK flag only if it is nonzero.
	* doc/glibc-functions/pipe2.texi: Mention the 'nonblocking' module.

2011-05-31  Bruno Haible  <bruno@clisp.org>

	Fix link errors in tests: openat-die uses gettext-h.
	* modules/areadlinkat-tests (Makefile.am): Link test-areadlinkat
	against $(LIBINTL).
	* modules/dirent-safer-tests (Makefile.am): Link test-dirent-safer
	against $(LIBINTL).
	* modules/fdopendir-tests (Makefile.am): Link test-fdopendir against
	$(LIBINTL).
	* modules/fdutimensat-tests (Makefile.am): Link test-fdutimensat
	against $(LIBINTL).
	* modules/linkat-tests (Makefile.am): Link test-linkat against
	$(LIBINTL).
	* modules/mkfifoat-tests (Makefile.am): Link test-mkfifoat against
	$(LIBINTL).
	* modules/openat-safer-tests (Makefile.am): Link test-openat-safer
	against $(LIBINTL).
	* modules/openat-tests (Makefile.am): Link test-fchownat, test-fstatat,
	test-mkdirat, test-openat, test-unlinkat against $(LIBINTL).
	* modules/readlinkat-tests (Makefile.am): Link test-readlinkat against
	$(LIBINTL).
	* modules/symlinkat-tests (Makefile.am): Link test-symlinkat against
	$(LIBINTL).
	* modules/utimensat-tests (Makefile.am): Link test-utimensat against
	$(LIBINTL).
	Reported by Tom G. Christensen <tgc@jupiterrise.com>.

2011-05-31  Bruno Haible  <bruno@clisp.org>

	Fix link errors in tests: wait-process uses gettext-h.